--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#e8d4f3",
   "icons": [
     {
-      "src": "logo_1.png",
+      "src": "logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
