--- a/Manifest.json
+++ b/Manifest.json
@@ -1,20 +1,22 @@
 {
   "name": "Chronex Classes",
   "short_name": "Chronex Classes",
-  "start_url": "Home.html",
+  
+  "start_url": "index.html", 
   "display": "standalone",
   "background_color": "#e8d4f3",
   "theme_color": "#e8d4f3",
   "icons": [
     {
-      "src": "https://placehold.co/192x192/7851A9/FFFFFF?text=CC",
+      
+      "src": "Logo%20(2).png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512/7851A9/FFFFFF?text=CC",
+      "src": "Logo%20(2).png",
       "sizes": "512x512",
       "type": "image/png"
     }
-   ]
+  ]
 }
