--- a/Manifest.json
+++ b/Manifest.json
@@ -1,20 +1,19 @@
 {
   "name": "Chronex Classes",
-  "short_name": "Chronex Classes",
-  
-  "start_url": "index.html", 
+  "short_name": "Chronex",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#e8d4f3",
+  "background_color": "#fffaf0",
   "theme_color": "#e8d4f3",
+  "description": "Your gateway to mastering Physics with clarity and confidence.",
   "icons": [
     {
-      
-      "src": "Logo%20(2).png",
+      "src": "Logo (2).png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "Logo%20(2).png",
+      "src": "Logo (2).png",
       "sizes": "512x512",
       "type": "image/png"
     }
