--- a/Manifest.json
+++ b/Manifest.json
@@ -1,21 +1,23 @@
 {
   "name": "Chronex Classes",
   "short_name": "Chronex",
-  "start_url": "index.html",
+  "start_url": "/index.html",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#fffaf0",
   "theme_color": "#e8d4f3",
-  "description": "Your gateway to mastering Physics with clarity and confidence.",
   "icons": [
     {
       "src": "Logo (2).png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "Logo (2).png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
