--- a/Manifest.json
+++ b/Manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Chronex Classes",
-  "short_name": "Chronex",
+  "short_name": "Chronex Classes",
   "start_url": "/index.html",
   "scope": "/",
   "display": "standalone",
