--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Chronex Classes",
-  "short_name": "Chronex Classes",
+  "short_name": "Chronex", 
   "description": "Master Physics with clarity and confidence at Chronex Classes – guided by Arko Das for WBCHSE and JEE aspirants.",
   "start_url": "./index.html",
   "scope": "./",
@@ -10,13 +10,14 @@
   "theme_color": "#e8d4f3",
   "icons": [
     {
-      "src": "Logo (2).png",
+      // Changed 'Logo (2).png' to 'Logo_2.png' (or ensure the filename matches exactly on your server)
+      "src": "Logo_2.png", 
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "Logo (2).png",
+      "src": "Logo_2.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
