--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Chronex Classes",
-  "short_name": "Chronex", 
+  "short_name": "Chronex Classes", 
   "description": "Master Physics with clarity and confidence at Chronex Classes – guided by Arko Das for WBCHSE and JEE aspirants.",
   "start_url": "./index.html",
   "scope": "./",
